# SPV

./: .gitignore  CITATION.cff  LICENSE  MATH.md  MATH_LaTeX.txt  Method1.drawio  Method2.drawio  README.md  SPV_out.drawio  Untitled Diagram.drawio  Untitled Diagram_2.drawio  Untitled Diagram_3.drawio
.github/: FUNDING.yml
.github/workflows/: rust.yml
Examples/Alpha Centauri A/: data.json  data.txt
Examples/Alpha Centauri AandB/: data.json  data.txt
Examples/Alpha Centauri AandC/: data.json  data.txt
Examples/Alpha Centauri B/: data.json  data.txt
Examples/Proxima Centauri/: data.json  data.txt
SPV/: Cargo.toml
SPV-rs/: Cargo.toml
SPV/src/: main.rs
spv-rs/: Cargo.toml
spv-rs-python/src/: lib.rs
spv-rs/src/: lib.rs
