[package]
name = "spv-rs"
version = "0.6.0"
authors = ["Albin Sjögren <albin@sjoegren.se>"]
edition = "2021"
license = "GPL-3.0"
description = "Math utility for astronomical data"
homepage = "https://github.com/AlbinSjoegren/SPV"
repository = "https://github.com/AlbinSjoegren/SPV"
readme = "../README.md"
keywords = ["astronomy", "math", "position", "velocity"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
glam = "0.20.2"
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }